# versations

./: .gitignore  LICENSE  README.md  client.py  main.py  pyproject.toml  requirements.txt  session.py  setup.cfg  setup.py  sync.sh
src/: client_callbacks.py  main.py
src/versations/: client.py  client_callbacks.py  main.py
